// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BadgeSeparator > should default render 1`] = `
<body>
  <div>
    <span
      class="tc-badge-separator _tc-badge-separator_2ccc7e"
    />
  </div>
</body>
`;

exports[`BadgeSeparator > should render with icon separator class 1`] = `
<body>
  <div>
    <span
      class="tc-badge-separator _tc-badge-separator_2ccc7e tc-badge-separator-icon _tc-badge-separator-icon_2ccc7e"
    />
  </div>
</body>
`;

exports[`BadgeSeparator should default render 1`] = `
<body>
  <div>
    <span
      class="tc-badge-separator theme-tc-badge-separator"
    />
  </div>
</body>
`;

exports[`BadgeSeparator should render with icon separator class 1`] = `
<body>
  <div>
    <span
      class="tc-badge-separator theme-tc-badge-separator tc-badge-separator-icon theme-tc-badge-separator-icon"
    />
  </div>
</body>
`;
